Finally reporting service is up and running | swagger documentation also done | here rabbitMQ not required as it required transaction datas synchronously
